# excalidraw

./: .env  index.html  package.json  pnpm-lock.yaml  tailwind.config.ts  todo.md  vite.config.ts
public/fonts/: fonts.css
src/: App.tsx  CustomStats.tsx  Example.tsx  app_constants.ts  global.scss  initialData.ts  main.tsx  useHandleAppTheme.tsx  utils.ts
src-tauri/: Cargo.toml  Info.plist  rustfmt.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src/components/: AppMainMenu.tsx  LanguageList.tsx  TopRightUI.tsx
src/data/: FileManager.ts  index.ts  localStorage.ts
src/hooks/: useAutoTheme.ts
src/utils/: index.ts
